--- a/src/components/classifieds-form/motorcycles/motorcycles.html
+++ b/src/components/classifieds-form/motorcycles/motorcycles.html
@@ -5,7 +5,7 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="brandsList" :error="newPostValidation.brand" id="brand" errorText="Select Brand" default="Select Brand"
+    <Select :options="brandsList" :error="newPostValidation.brand" id="brand" errorText="Select Brand" :selected="newPost.brand" placeholder="Select Brand"
     @selectValue="updatePostData('brand', $event)" />
   </div>
   <div class="col-12 mb-3">
@@ -14,13 +14,13 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="modelsList" :error="newPostValidation.model" id="model" errorText="Select Model" default="Select Model"
+    <Select :options="modelsList" :error="newPostValidation.model" id="model" errorText="Select Model" :selected="newPost.model" placeholder="Select Model"
     @selectValue="updatePostData('model', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>Select Trim</label>
     <!-- prettier-ignore -->
-    <Select :options="trimList" :error="newPostValidation.trim" id="trim" errorText="Select Trim" default="Select Trim"
+    <Select :options="trimList" :error="newPostValidation.trim" id="trim" errorText="Select Trim" :selected="newPost.trim" placeholder="Select Trim"
     @selectValue="updatePostData('trim', $event)" />
   </div>
   <div class="col-12 mb-3">
@@ -29,7 +29,7 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.motorcycleSubcateList()" :error="newPostValidation.subcategory" id="subcategory" errorText="Select SubCategory" default="Select SubCategory"
+    <Select :options="utils.motorcycleSubcateList()" :error="newPostValidation.subcategory" id="subcategory" :selected="newPost.subcategory" errorText="Select SubCategory" placeholder="Select SubCategory"
     @selectValue="updatePostData('subcategory', $event)" />
   </div>
   <div class="col-12 mb-3">
@@ -73,8 +73,8 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.emiratesLocationList()" :error="newPostValidation.place" errorText="Select Place"
-      default="Select Place" @selectValue="updatePostData('place', $event)" />
+    <Select :options="utils.emiratesLocationList()" :error="newPostValidation.place" errorText="Select Place" :selected="newPost.place"
+      placeholder="Select Place" @selectValue="updatePostData('place', $event)" />
   </div>
   <div class="col-12 mb-3">
     <label>Display Picture<span>*</span></label>
@@ -100,26 +100,26 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.motorCyclefDSystemList()" :error="newPostValidation.finalDriveSystem" errorText="Select Final Drive System"
-    default="Select Final Drive System" @selectValue="updatePostData('finalDriveSystem', $event)" id="finalDriveSystem" />
+    placeholder="Select Final Drive System" @selectValue="updatePostData('finalDriveSystem', $event)" id="finalDriveSystem" :selected="newPost.finalDriveSystem" />
   </div>
   <div class="col-12 mb-3">
     <label>Select Wheels</label>
     <!-- prettier-ignore -->
-    <Select :options="utils.wheelsDropdownValues()" :error="newPostValidation.wheels" errorText="Select Wheels" default="Select Wheels"
-    @selectValue="updatePostData('wheels', $event)" id="wheels" />
+    <Select :options="utils.wheelsDropdownValues()" :error="newPostValidation.wheels" errorText="Select Wheels" placeholder="Select Wheels"
+    @selectValue="updatePostData('wheels', $event)" id="wheels" :selected="newPost.wheels" />
   </div>
   <div class="col-12 mb-3">
     <label>Select Engine Size </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.motorCycleEngineSizeList()" :error="newPostValidation.engineSize" errorText="Select Engine Size " default="Select Engine Size "
-    @selectValue="updatePostData('engineSize', $event)" id="engineSize" />
+    <Select :options="utils.motorCycleEngineSizeList()" :error="newPostValidation.engineSize" errorText="Select Engine Size " placeholder="Select Engine Size "
+    @selectValue="updatePostData('engineSize', $event)" id="engineSize" :selected="newPost.engineSize" />
   </div>
 
   <div class="col-12 mb-3">
     <label>Select Regional spec </label>
     <!-- prettier-ignore -->
-    <Select :options="utils.motorCycleRegionalSpecList()" :error="newPostValidation.regionalSpec" errorText="Select Regional spec " default="Select Regional spec "
-    @selectValue="updatePostData('regionalSpec', $event)" id="regionalSpec" />
+    <Select :options="utils.motorCycleRegionalSpecList()" :error="newPostValidation.regionalSpec" errorText="Select Regional spec " placeholder="Select Regional spec "
+    @selectValue="updatePostData('regionalSpec', $event)" id="regionalSpec" :selected="newPost.regionalSpec" />
   </div>
   <div class="col-12 mb-3">
     <label>Price <span>*</span></label>
@@ -134,8 +134,8 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.colorDropDownValues()" :error="newPostValidation.exteriorColor"
-    errorText="Select Exterior Color" default="Select Exterior Color"
-    @selectValue="updatePostData('exteriorColor', $event)" id="exteriorColor" />
+    errorText="Select Exterior Color" placeholder="Select Exterior Color"
+    @selectValue="updatePostData('exteriorColor', $event)" id="exteriorColor" :selected="newPost.exteriorColor" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -144,8 +144,8 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.bodyConditionDropDownValues()" :error="newPostValidation.bodyCondition"
-    errorText="Select Body Condition" default="Select Body Condition"
-    @selectValue="updatePostData('bodyCondition', $event)" id="bodyCondition" />
+    errorText="Select Body Condition" placeholder="Select Body Condition"
+    @selectValue="updatePostData('bodyCondition', $event)" id="bodyCondition" :selected="newPost.bodyCondition" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -154,8 +154,8 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.mechanicalConditionDropDownValues()" :error="newPostValidation.mechanicalCondition"
-    errorText="Select Mechanical Condition" default="Select Mechanical Condition"
-    @selectValue="updatePostData('mechanicalCondition', $event)" id="mechanicalCondition" />
+    errorText="Select Mechanical Condition" placeholder="Select Mechanical Condition"
+    @selectValue="updatePostData('mechanicalCondition', $event)" id="mechanicalCondition" :selected="newPost.mechanicalCondition" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -164,7 +164,7 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.sellerTypes(loginInfo.userType)" :error="newPostValidation.sellerType" errorText="Select Seller Type"
-    default="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" id="sellerType" />
+    placeholder="Select Seller Type" @selectValue="updatePostData('sellerType', $event)" id="sellerType" :selected="newPost.sellerType" />
   </div>
   <div class="col-12 mb-3">
     <label> Video Link </label>
