--- a/src/components/common/modal/modal.scss
+++ b/src/components/common/modal/modal.scss
@@ -97,7 +97,8 @@
   }
 
   @media screen and (max-width: 991px) {
-    &.small {
+    &.small,
+    &.medium {
       .popup-wrapper {
         .popup-container {
           width: 100%;
