--- a/src/components/lease-list/lease-list.scss
+++ b/src/components/lease-list/lease-list.scss
@@ -151,6 +151,8 @@
         display: flex;
         img {
           max-width: 110px;
+          max-height: 80px;
+          object-fit: cover;
         }
         ul {
           font-size: 0.75rem;
