--- a/src/components/rental-list/rental-list.scss
+++ b/src/components/rental-list/rental-list.scss
@@ -152,6 +152,7 @@
         img {
           max-width: 110px;
           max-height: 80px;
+          object-fit: cover;
         }
         ul {
           font-size: 0.75rem;
