--- a/src/components/star/star.html
+++ b/src/components/star/star.html
@@ -10,7 +10,9 @@
       <font-awesome-icon :icon="['fas', 'star']" />
     </span>
     <span class="ml-2 rating-value">{{actualValue}}</span>
+    <div class="review-link">view reviews</div>
   </section>
+
   <ReviewModal
     class="small"
     v-if="showReviewModal"
