--- a/src/components/garage-list/garage-list.html
+++ b/src/components/garage-list/garage-list.html
@@ -21,16 +21,23 @@
       <div class="filter-wrapper mt-3 d-flex justify-content-end">
         <!-- prettier-ignore -->
         <Button type="hollow" text="Add Your Garage" class="mr-3" @click="addGarage()" v-if="showNewPost" />
-        <font-awesome-icon :icon="['fas', 'sliders-h']" @click="filterToggle" />
+        <!-- prettier-ignore -->
+        <Button type=" red small" text="Clear Filter" @click="clearFilter" v-if="isFilter && garageCategory === 'browse'" class="mr-3" />
+        <font-awesome-icon
+          :icon="['fas', 'sliders-h']"
+          @click="filterToggle"
+          v-if="garageCategory === 'browse'"
+        />
         <GarageFilter
           :data="garageList"
           @close="filterToggle"
           v-if="filterEnabled"
+          @filteredData="updatePostData($event)"
         />
       </div>
     </div>
   </div>
-  <div v-if="garageList">
+  <div v-if="garageList && garageList.length">
     <div
       class="row mb-5 pb-2 pt-3 garage-list-container"
       v-if="garageCategory === 'browse'"
@@ -100,7 +107,12 @@
       </div>
     </div>
   </div>
-  <div v-else class="d-flex justify-content-center my-5">
-    No Garages/Deals Found!!
+  <div
+    v-else
+    class="col-12 d-flex flex-column justify-content-center align-items-center no-result"
+  >
+    <img src="../../assets/no-results.png" class="img-fluid" />
+    <h6>No Garages/Deals Found!!</h6>
+    <p class="my-2">try changing the filters</p>
   </div>
 </div>
