--- a/src/components/lease-list/lease-list.html
+++ b/src/components/lease-list/lease-list.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="dealer">
                       <img
-                      :src="getDealerLogo(post.dealerLogo, post.imageFolder)"
+                      :src="getDealerLogo(post.dealerLogo, post.dealerImageFolder)"
                     />
                       <ul>
                         <li v-for="list in getBulletFeaturesList(post.features).slice(0,4)">{{list.title}}</li>
