--- a/src/components/spare-filter/spare-filter.html
+++ b/src/components/spare-filter/spare-filter.html
@@ -8,12 +8,12 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Brand</label>
         <!-- prettier-ignore -->
-        <Select :options="getCarMakes" default="Select Brand" @selectValue="updateSelectedCarMake" />
+        <Select :options="getCarMakes" placeholder="Select Brand" @selectValue="updateSelectedCarMake" :selected="filterData.brand" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Model</label>
         <!-- prettier-ignore -->
-        <Select :options="getAllModels" default="Select Model" @selectValue="getSelectInput" />
+        <Select :options="getAllModels" placeholder="Select Model" @selectValue="getSelectInput" :selected="filterData.model" />
       </div>
       <div class="col-12 col-lg-3 filter-column">
         <label>Year of Make</label>
@@ -35,7 +35,7 @@
       <div class="col-12 col-lg-3 filter-column">
         <label>Warranty</label>
         <!-- prettier-ignore -->
-        <Select :options="[]" default="Select Warranty" @selectValue="getSelectInput" />
+        <Select :options="[]" placeholder="Select Warranty" @selectValue="getSelectInput" :selected="filterData.warranty" />
       </div>
       <div class="col-12 button-wrapper d-flex justify-content-end my-3">
         <!-- prettier-ignore -->
