--- a/src/components/spare-parts-form/bikes/bikes.html
+++ b/src/components/spare-parts-form/bikes/bikes.html
@@ -27,8 +27,8 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="brandsList" :error="newPostValidation.brand" errorText="Select Brand" default="Select Brand"
-    @selectValue="updatePostData('brand', $event)" />
+    <Select :options="brandsList" :error="newPostValidation.brand" errorText="Select Brand" placeholder="Select Brand"
+    @selectValue="updatePostData('brand', $event)" :selected="newPost.brand" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -36,8 +36,8 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="modelsList" :error="newPostValidation.model" errorText="Select Model" default="Select Model"
-    @selectValue="updatePostData('model', $event)" />
+    <Select :options="modelsList" :error="newPostValidation.model" errorText="Select Model" placeholder="Select Model"
+    @selectValue="updatePostData('model', $event)" :selected="newPost.model" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -46,7 +46,7 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.yearDropdownValues()" :error="newPostValidation.year" errorText="Select Year"
-    default="Select Year" @selectValue="updatePostData('year', $event)" />
+    placeholder="Select Year" @selectValue="updatePostData('year', $event)" :selected="newPost.year" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -54,20 +54,20 @@
       <span>*</span>
     </label>
     <!-- prettier-ignore -->
-    <Select :options="categoryList" :error="newPostValidation.category" errorText="Select Category" default="Select Category"
-    @selectValue="updatePostData('category', $event)" />
+    <Select :options="categoryList" :error="newPostValidation.category" errorText="Select Category" placeholder="Select Category"
+    @selectValue="updatePostData('category', $event)" :selected="newPost.category" />
   </div>
   <div class="col-12 mb-3">
     <label> Select SubCategory </label>
     <!-- prettier-ignore -->
-    <Select :options="subCategoryList" :error="newPostValidation.subcategory" errorText="Select SubCategory" default="Select SubCategory"
-    @selectValue="updatePostData('subcategory', $event)" />
+    <Select :options="subCategoryList" :error="newPostValidation.subcategory" errorText="Select SubCategory" placeholder="Select SubCategory"
+    @selectValue="updatePostData('subcategory', $event)" :selected="newPost.subcategory" />
   </div>
   <div class="col-12 mb-3">
     <label>Select Item</label>
     <!-- prettier-ignore -->
-    <Select :options="spareItemList" :error="newPostValidation.spareItem" errorText="Select Item" default="Select Item"
-    @selectValue="updatePostData('spareItem', $event)" />
+    <Select :options="spareItemList" :error="newPostValidation.spareItem" errorText="Select Item" placeholder="Select Item"
+    @selectValue="updatePostData('spareItem', $event)" :selected="newPost.spareItem" />
   </div>
   <div class="col-12 mb-3">
     <label>
@@ -111,7 +111,7 @@
     </label>
     <!-- prettier-ignore -->
     <Select :options="utils.yesNoDropdownValues()" :error="newPostValidation.warranty" errorText="Select Warranty"
-    default="Select Warranty" @selectValue="updatePostData('warranty', $event)" />
+    placeholder="Select Warranty" @selectValue="updatePostData('warranty', $event)" :selected="newPost.warranty" />
   </div>
   <div class="col-12 mb-3">
     <label>
