--- a/src/views/super-dashboard/super-dashboard.html
+++ b/src/views/super-dashboard/super-dashboard.html
@@ -11,7 +11,7 @@
       <label>Select Category <span>*</span></label>
       <!-- prettier-ignore -->
       <Select :options="mainCategoryList"
-        default="Select Category" @selectValue="setPageCategory($event)" />
+        placeholder="Select Category" @selectValue="setPageCategory($event)" :selected="page" />
     </div>
     <div class="col-12 mb-md-5 mb-3 mt-3 p-md-0">
       <ul class="nav nav-tabs w-100" v-if="page == 'classifieds'">
@@ -26,6 +26,16 @@
       </ul>
       <ul class="nav nav-tabs w-100" v-else-if="page == 'spare-parts'">
         <li class="nav-item" v-for="item in spareCategoryList">
+          <a
+            class="nav-link"
+            :class="item.id==type && 'active'"
+            @click="getNonApprovedPosts(item.id)"
+            >{{item.title}}</a
+          >
+        </li>
+      </ul>
+      <ul class="nav nav-tabs w-100" v-else-if="page == 'garages'">
+        <li class="nav-item" v-for="item in garageCategoryList">
           <a
             class="nav-link"
             :class="item.id==type && 'active'"
@@ -56,7 +66,7 @@
           </div>
           <div
             class="d-flex"
-            v-else-if="key[0] == 'gallery' || key[0] == 'galleryImages' || key[0] == 'dealerLogo' || key[0] == 'profilePicture' || key[0] == 'displayPicture'"
+            v-else-if="key[0] == 'gallery' || key[0] == 'galleryImages' || key[0] == 'dealerLogo' || key[0] == 'profilePicture' || key[0] == 'displayPicture' || key[0] == 'dealBanner'"
           >
             <div class="w-50 p-0 d-flex py-1">{{key[0]}}:</div>
             <div class="w-50 p-0 d-flex py-1 flex-wrap">
